@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-05-17 patrickh Use UuidCreate() on Windows to generate GUIDs.
+                    NEW VERSION: 0.35.3-1
 2004-04-21 patrickh With SPROC threads, thread-specific data is now stored in
            aronb    PRDA->usr2_data to avoid conflicts with OpenSG and
                     OpenThreads.
